# pas-alpha-prototype-be

./: Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  fields.py  main.py
app/auth/: controller.py  db.py  router.py  schemas.py
app/commissioning_bodies/: controller.py  db.py  router.py  schemas.py
app/drugs/: controller.py  db.py  router.py  schemas.py
app/forms/: controller.py  db.py  exceptions.py  router.py  schemas.py
app/invoices/: controller.py  db.py  router.py  schemas.py
app/patients/: controller.py  db.py  exceptions.py  router.py  schemas.py
app/providers/: controller.py  db.py  router.py  schemas.py
app/reports/: controller.py  db.py  router.py  schemas.py
app/requests/: controller.py  db.py  router.py  schemas.py
