[project]
name = "pas-alpha-prototype-be"
version = "0.1.0"
description = "Prior Approval System - Alpha Prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "databases[asyncpg]>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
